--- a/public/style.css
+++ b/public/style.css
@@ -193,10 +193,12 @@ h3 {
   padding: 5px;
   width: 60%;
   border: 2px solid black;
+  border-radius: 10px;
+  background-color: rgb(151, 255, 165);
 }
 
 .closed {
-  background-color: lightgrey;
+  background-color: rgb(182, 182, 182);
 }
 
 .id {
