--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- CSS Links -->
-    <link type="text/css" rel="stylesheet" href="style.css" />
+    <link type="text/css" rel="stylesheet" href="/public/style.css" />
 
     <!-- Title -->
     <title>Issue Tracker</title>
@@ -161,7 +161,7 @@
 
     <div class="center">
       <h3>Example Project:</h3>
-      <p><a href="/apitest/">Go to /api_test/ project issues</a></p>
+      <p><a href="/api_test/">Go to /api_test/ project issues</a></p>
       <h3>Example Usage:</h3>
       <p>
         <strong>GET: </strong
